Resume file added and linked, intro text added, gap corrected, header and footer updated in all files, navbar blind spot removed

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a { -webkit-transition: .3s all ease; -o-transition: .3s all ease; transition: .
 
 a:hover, a:active, a:focus { text-decoration: none; outline: none; }
 
-.templateux-navbar { position: absolute; top: 0; left: 0; width: 100%; padding: 35px 0; z-index: 99999; }
+.templateux-navbar { position: absolute; top: 0; left: 0; width: 95%; padding: 35px 0; z-index: 99999; }
 
 .templateux-navbar .container-fluid { max-width: 100%; }
 
@@ -67,9 +67,9 @@ a:hover, a:active, a:focus { text-decoration: none; outline: none; }
 
 .templateux-hero { background-size: cover; background-repeat: no-repeat; background-position: center center; position: relative; overflow: hidden; }
 
-.templateux-hero .lead { font-size: 28px; }
+.templateux-hero .lead { font-size: 22px; }
 
-@media (max-width: 991.98px) { .templateux-hero .lead { font-size: 20px; } }
+@media (max-width: 991.98px) { .templateux-hero .lead { font-size: 22px; } }
 
 .templateux-hero .cover { position: absolute; display: block; width: 100%; height: 100%; z-index: -1; }
 
@@ -81,13 +81,15 @@ a:hover, a:active, a:focus { text-decoration: none; outline: none; }
 
 .templateux-hero.overlay .lead { color: #fff; opacity: .5; }
 
-.templateux-hero, .intro { height: 90vh; min-height: 700px; }
+.templateux-hero, .intro { height: 90vh; min-height: 400px; }
+
+.templateux-hero-project { height: 90vh; max-height: 500px; }
 
 .templateux-hero h1, .intro h1 { color: #000; font-size: 70px; }
 
 @media (max-width: 991.98px) { .templateux-hero h1, .intro h1 { font-size: 36px; } }
 
-.templateux-portfolio-overlap { position: relative; margin-top: -100px; }
+.templateux-portfolio-overlap { position: relative; margin-top: 0px; }
 
 @media (max-width: 991.98px) { .templateux-portfolio-overlap { margin-top: -50px; } }
 
